tests/bench-micro/bench_micro_stubs.h


int f_i0 ();
int f_i1 (int i0);
int f_i2 (int i0, int i1);
int f_i3 (int i0, int i1, int i2);
int f_i4 (int i0, int i1, int i2, int i3);
int f_i5 (int i0, int i1, int i2, int i3, int i4);
int f_i6 (int i0, int i1, int i2, int i3, int i4, int i5);
int f_i7 (int i0, int i1, int i2, int i3, int i4, int i5, int i6);
int f_i8 (int i0, int i1, int i2, int i3, int i4, int i5, int i6, int i7);
int f_i9 (int i0, int i1, int i2, int i3, int i4, int i5, int i6, int i7, int i8);